improve lb config

--- a/nginx-load-balancer/lb.conf
+++ b/nginx-load-balancer/lb.conf
@@ -6,18 +6,18 @@ stream {
         }
 
         upstream apigw_servers {
-                server pr-apic-dpgw1.nsb.local:443;
-                server pr-apic-dpgw2.nsb.local:443;
-                server pr-apic-dpgw3.nsb.local:443;
+                server pr-apic-dpgw1-fe.nsb.local:443;
+                server pr-apic-dpgw2-fe.nsb.local:443;
+                server pr-apic-dpgw3-fe.nsb.local:443;
         }
 
         server {
-                listen 3000;
+                listen 172.22.10.250:3000;
                 proxy_pass apigw_mgmt;
         }
 
         server {
-                listen 443;
+                listen 172.22.10.50:443;
                 proxy_pass apigw_servers;
         }
 }
