--- a/config/active-site/common-data.yaml
+++ b/config/active-site/common-data.yaml
@@ -9,30 +9,30 @@ peer_group:
     ip: 172.22.10.141
 host_aliases:
   - fqdn: pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: &mgr_ip 192.168.72.11
   - fqdn: platform-api.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
   - fqdn: consumer-api.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
   - fqdn: cloud-admin-ui.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
   - fqdn: api-manager-ui.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
   - fqdn: hub.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
   - fqdn: turnstile.pr-apic-mgr.nsb.local
-    ip: 192.168.72.11
+    ip: *mgr_ip
 
   - fqdn: pr-apic-anytcs.nsb.local
-    ip: 192.168.72.12
+    ip: &anytcs_ip 192.168.72.12
   - fqdn: analytics-client.pr-apic-anytcs.nsb.local
-    ip: 192.168.72.12
+    ip: *anytcs_ip
   - fqdn: analytics-ingestion.pr-apic-anytcs.nsb.local
-    ip: 192.168.72.12
+    ip: *anytcs_ip
 
   - fqdn: pr-apic-devptl.nsb.local
-    ip: 192.168.72.13
+    ip: &devptl_ip 192.168.72.13
   - fqdn: portal-admin.pr-apic-devptl.nsb.local
-    ip: 192.168.72.13
+    ip: *devptl_ip
   - fqdn: portal-www.pr-apic-devptl.nsb.local
-    ip: 192.168.72.13
+    ip: *devptl_ip
