--- a/config/passive-site/datapower-1/data.yaml
+++ b/config/passive-site/datapower-1/data.yaml
@@ -1,5 +1,5 @@
 ---
 backend_ip: 172.23.10.139
 frontend_ip: 172.23.10.11
-fqdn: pr-apic-dpgw1.nsb.local
+fqdn: dr-apic-dpgw1.apic.nsb.local
 gateway_peering_priority: 100
