--- a/config/passive-site/datapower-2/data.yaml
+++ b/config/passive-site/datapower-2/data.yaml
@@ -1,5 +1,5 @@
 ---
 backend_ip: 172.23.10.140
 frontend_ip: 172.23.10.12
-fqdn: pr-apic-dpgw2.nsb.local
+fqdn: dr-apic-dpgw2.apic.nsb.local
 gateway_peering_priority: 105
