--- a/config/passive-site/datapower-3/data.yaml
+++ b/config/passive-site/datapower-3/data.yaml
@@ -1,5 +1,5 @@
 ---
 backend_ip: 172.23.10.141
 frontend_ip: 172.23.10.13
-fqdn: pr-apic-dpgw3.nsb.local
+fqdn: dr-apic-dpgw3.apic.nsb.local
 gateway_peering_priority: 110
