update load balancer config: use hostnames instead of IP addresses to listen on

--- a/config/active-site/nginx-load-balancer/lb.conf
+++ b/config/active-site/nginx-load-balancer/lb.conf
@@ -12,12 +12,12 @@ stream {
         }
 
         server {
-                listen 172.22.10.250:3000;
+                listen pr-apic-dpgw-be:3000;
                 proxy_pass apigw_mgmt;
         }
 
         server {
-                listen 172.22.10.50:443;
+                listen pr-apic-dpgw-fe:443;
                 proxy_pass apigw_servers;
         }
 }
