--- a/config/passive-site/nginx-load-balancer/lb.conf
+++ b/config/passive-site/nginx-load-balancer/lb.conf
@@ -12,12 +12,13 @@ stream {
         }
 
         server {
-                listen 172.23.10.250:3000;
+                listen dr-apic-dpgw-be:3000;
                 proxy_pass apigw_mgmt;
         }
 
         server {
-                listen 172.23.10.50:443;
+                listen dr-apic-dpgw-fe:443;
                 proxy_pass apigw_servers;
         }
+
 }
