--- a/config/passive-site/datapower-1/data.yaml
+++ b/config/passive-site/datapower-1/data.yaml
@@ -1,5 +1,5 @@
 ---
 backend_ip: 192.168.173.139
 frontend_ip: 192.168.173.11
-fqdn: dr-apic-dpgw1.apic.nsb.local
+fqdn: pr-apic-dpgw1.apic.nsb.local
 gateway_peering_priority: 100
