--- a/config/passive-site/datapower-2/data.yaml
+++ b/config/passive-site/datapower-2/data.yaml
@@ -1,5 +1,5 @@
 ---
 backend_ip: 192.168.173.140
 frontend_ip: 192.168.173.12
-fqdn: dr-apic-dpgw2.apic.nsb.local
+fqdn: pr-apic-dpgw2.apic.nsb.local
 gateway_peering_priority: 105
