--- a/config/passive-site/nginx-load-balancer/lb.conf
+++ b/config/passive-site/nginx-load-balancer/lb.conf
@@ -1,23 +1,23 @@
 stream {
         upstream apigw_mgmt {
-                server dr-apic-dpgw1-be:3000;
-                server dr-apic-dpgw2-be:3000;
-                server dr-apic-dpgw3-be:3000;
+                server pr-apic-dpgw1-be:3000;
+                server pr-apic-dpgw2-be:3000;
+                server pr-apic-dpgw3-be:3000;
         }
 
         upstream apigw_servers {
-                server dr-apic-dpgw1-fe:443;
-                server dr-apic-dpgw2-fe:443;
-                server dr-apic-dpgw3-fe:443;
+                server pr-apic-dpgw1-fe:443;
+                server pr-apic-dpgw2-fe:443;
+                server pr-apic-dpgw3-fe:443;
         }
 
         server {
-                listen dr-apic-dpgw-be:3000;
+                listen pr-apic-dpgw-be:3000;
                 proxy_pass apigw_mgmt;
         }
 
         server {
-                listen dr-apic-dpgw-fe:443;
+                listen pr-apic-dpgw-fe:443;
                 proxy_pass apigw_servers;
         }
 
