--- a/config/passive-site/common-data.yaml
+++ b/config/passive-site/common-data.yaml
@@ -2,9 +2,51 @@ xml_mgmt_port: 5550
 rest_mgmt_port: 5554
 peer_group:
   - fqdn: pr-apic-dpgw1.apic.nsb.local
-    ip: 192.168.173.139
+    ip: 172.23.8.76
   - fqdn: pr-apic-dpgw2.apic.nsb.local
-    ip: 192.168.173.140
+    ip: 172.23.8.77
   - fqdn: pr-apic-dpgw3.apic.nsb.local
-    ip: 192.168.173.141
-host_aliases: []
+    ip: 172.23.8.78
+host_aliases:
+  - fqdn: pr-apic-dpgw1-be.apic.nsb.local
+    ip: 172.23.8.76
+  - fqdn: pr-apic-dpgw2-be.apic.nsb.local
+    ip: 172.23.8.77
+  - fqdn: pr-apic-dpgw3-be.apic.nsb.local
+    ip: 172.23.8.78
+  - fqdn: pr-apic-dpgw1-fe.apic.nsb.local
+    ip: 172.23.8.11
+  - fqdn: pr-apic-dpgw2-fe.apic.nsb.local
+    ip: 172.23.8.12
+  - fqdn: pr-apic-dpgw3-fe.apic.nsb.local
+    ip: 172.23.8.13
+  - fqdn: pr-apic-dpgw-fe.apic.nsb.local
+    ip: 172.23.8.60
+  - fqdn: pr-apic-dpgw-be.apic.nsb.local
+    ip: 172.23.8.124
+  - fqdn: pr-apic-mgr.apic.nsb.local
+    ip: &mgr 192.168.172.11
+  - fqdn: pr-apic-anytcs.apic.nsb.local
+    ip: &anytcs 192.168.172.12
+  - fqdn: pr-apic-devptl.apic.nsb.local
+    ip: &devptl 192.168.172.13
+  - fqdn: api-manager-ui.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: cloud-admin-ui.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: consumer-api.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: hub.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: platform-api.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: turnstile.mgmt.apic.nsb.local
+    ip: *mgr
+  - fqdn: analytics-client.analyt.apic.nsb.local
+    ip: *anytcs
+  - fqdn: analytics-ingestion.analyt.apic.nsb.local
+    ip: *anytcs
+  - fqdn: portal-admin.port.apic.nsb.local
+    ip: *devptl
+  - fqdn: portal-www.port.apic.nsb.local
+    ip: *devptl
