--- a/config/active-site/datapower-3/data.yaml
+++ b/config/active-site/datapower-3/data.yaml
@@ -1,5 +1,7 @@
 ---
 backend_ip: 172.22.8.78
 frontend_ip: 172.22.8.13
+backend_fqdn: pr-apic-dpgw3-be.apic.nsb.local
+frontend_fqdn: pr-apic-dpgw3-fe.apic.nsb.local
 fqdn: pr-apic-dpgw3.apic.nsb.local
 gateway_peering_priority: 110
